<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.teja.apple.oakridgeinternationalschool.SignupActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:layout_centerInParent="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/i"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_above="@+id/scroll"
                android:layout_gravity="center"
                android:src="@drawable/oakridge" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/student_id"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etgrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/grade"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/age"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/pd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCpd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etCpd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/con_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/cardview_dark_background"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>
</RelativeLayout>
