<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.teja.apple.oakridgeinternationalschool.LoginActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/i"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/scLayout"
        android:layout_gravity="center"
        android:src="@drawable/oakridge" />

    <ScrollView
        android:id="@+id/scLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/sid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"

                    android:hint="@string/user"
                    android:drawableLeft="@drawable/ic_person"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilUserName"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/pd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_pass"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilPassword"
                android:gravity="center"
                android:text="FORGOT PASSWORD?"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/btn_border"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <View
            android:layout_height="1dp"
            android:layout_width="001dp"
            android:layout_weight="0.01"
            />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/login_border"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>
