<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.teja.apple.oakridgeinternationalschool.Fragment.AboutUsFragment">

    <ScrollView
        android:id="@+id/srol1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:addStatesFromChildren="true"
        android:animateLayoutChanges="true"
        android:clipChildren="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="6dp"
                app:slideInterval="3000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <WebView
                    android:id="@+id/webView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="42dp" />


                <RelativeLayout
                    android:id="@+id/rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="15dp"
                        android:paddingRight="20dp"
                        android:text="About Oakridge"
                        android:textColor="#f206b7"
                        android:textSize="22dp" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginStart="25dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="20dp"
                        android:text="@string/about_us" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text1"
                        android:paddingLeft="15dp"
                        android:paddingRight="20dp"
                        android:text="Academics"
                        android:textColor="#f206b7"
                        android:textSize="22dp" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text2"
                        android:layout_marginStart="25dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="20dp"
                        android:text="@string/Academics" />

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text3"
                        android:paddingLeft="15dp"
                        android:paddingRight="20dp"
                        android:text="Facilities"
                        android:textColor="#f206b7"
                        android:textSize="22dp" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/text5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text4"
                        android:layout_marginStart="25dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="20dp"
                        android:text="@string/Facilities" />

                    <TextView
                        android:id="@+id/text6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text5"
                        android:paddingLeft="15dp"
                        android:paddingRight="20dp"
                        android:text="Admissions"
                        android:textColor="#f206b7"
                        android:textSize="22dp" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/text7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text6"
                        android:layout_marginStart="25dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="100dp"
                        android:text="@string/Admissions" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
